--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,7 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11724221.md#1" target="_blank">美国40多年来是如何帮助中国的</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11724221.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/06-dave-150x120.jpg" align ="left"></a>12月12日，美国亚太助理国务卿史达伟（David Stilwell）就“美中关系和历史的教训”为题在华府智库“战略与国际研究中心（CSIS）”发表演讲，讲述了40多年来美国如何帮助中国的历史。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank">中共控制留学生 破坏美国大学学术自由</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/classroom-381900_1280-150x120.jpg" align ="left"></a>中共通过驻外使馆对海外留学生进行控制，有西方学者已认识到中共正在系统地破坏西方学术自由，动摇西方价值体系根基，并出台了准则，共同抵制对学术自由的威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank">林郑月娥赴京述职地点突改变 引揣测</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/36-1-150x120.jpg" align ="left"></a>香港特首林郑月娥日前进京述职。今天（12月16日），林郑分别与李克强、习近平见面，汇报香港的最新情况。有报导说，林郑今天的述职地点，由此前的中南海紫光阁改为人民大会堂，引外界揣测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank">“辱母杀人案”苏银霞出狱 49岁头发全白</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/6a03dc1766fd694f949bbd8833d26a2c-150x120.jpg" align ="left"></a>山东“辱母杀人案”的母亲苏银霞，坐牢3年后，于12月14日刑满释放。现年49岁的苏银霞头发全白了。她说，在监狱特别愁，心理压力特别大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank">遭中共疯狂仿制武器 俄因未申请专利而无奈</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/03/1203071717381119-150x120.jpg" align ="left"></a>中共不断仿制武器让俄罗斯伤透脑筋。近日，有俄罗斯军工领域负责人表示，从航空发动机到战斗机，再到防空导弹，中共无所不仿，但由于没有申请国际专利，俄罗斯对此几乎束手无策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724740.md#1" target="_blank">原吴小晖旗下成都农商行被收归“国有”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724740.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/wu-xiaohui1-VCG111113690722-1-150x120.jpg" align ="left"></a>原吴小晖安邦旗下的成都农商行股份转让一事近来有了眉目，成都市兴城投资集团将受让安邦保险集团所持有的35亿股股权。此项交易或将在年底前挂牌公示。兴城投资集团是成都市国资委100%持股的城投平台，即成都农商行将被中共收归“国有”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:56 PM							</td></tr>
@@ -31,9 +28,12 @@
 
 2.前国防部长：美国外交的新纪元将到来
 美国前国防部长约翰?哈姆雷(John J Hamre)表示，美国外交正处于历史关键时刻，面对变化中的世界.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 9:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722274.md#1" target="_blank">秘密录音曝中共胁迫选华为 丹麦政要反击</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722274.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_15X836-150x120.jpg" align ="left"></a>华为5G在全球引爆安全担忧，但在法罗群岛，一个位于北大西洋的丹麦王国成员，人们似乎对此并不在意，直到近日一份录音曝光中共胁迫言行，让这个小岛和华为成了全球关注点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723940.md#1" target="_blank">北京暂停原订15日生效的对美新关税</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1148843006-150x120.jpg" align ="left"></a>美中周五（12月13日）宣布达成第一阶段贸易协议后，中方周日（15日）宣布，暂不实施原订15日对部分美国商品加征关税的计划。美方早前也宣布了暂停实施15日生效的对华新关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11724338.md#1" target="_blank">河北遵化 12名法轮功学员面临非法庭审</a><br></h3>7月6日，遵化多个村镇的法轮功学员几乎同时在凌晨3点多遭到警察入室绑架、抄家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724685.md#1" target="_blank">北京发大雾黄色预警 局地能见度低于500米</a><br></h3>据北京市气象局官网消息，今早（16日）8时，北京市发布大雾黄色预警，且多个地区下雪，其中延庆最大降雪已经达到了7.3毫米。受天气影响，首都机场已取消140架次航班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11724326.md#1" target="_blank">《延禧》女星拔火罐出意外 后背手臂被烧烂</a><br></h3>曾在《延禧攻略》剧集中饰演“魏璎珞”之姊“魏璎宁”的大陆女星邓莎，12月14日在微博发文透露，日前工作结束后到SPA（拉丁文“Solus Por Aqua”的简写，美容店）店做拔火罐，没想到发生意外。在她晒出的照片中，她的后背和手臂被严重烧伤，伤口触目惊心，消息一度登上热搜榜首。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11724303.md#1" target="_blank">辽宁法轮功学员徐传德多年前被迫害离世</a><br></h3>曾遭受中共非法劳教3年、判刑4年的辽宁省营口市老边区法轮功学员徐传德，于2013年黄历5月17日被迫害离世，年仅46岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723512.md#1" target="_blank">烟台银行前董事长涉受贿罪被起诉</a><br></h3>12月12日，中共烟台市纪委监委网站发布通报称，烟台银行原党委书记、董事长叶文君被开除党籍，将其涉嫌犯罪问题移送检察机关依法审查起诉。这已经是烟台银行第三个落马的董事长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
