--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -22,6 +22,10 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719585.md#1" target="_blank">【名家专栏】“富人税”是在“劫富济贫”？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719585.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1192569006-crop-1200x720-150x120.jpg" align ="left"></a>“富人税”（财产税）不会让一个穷人变得富有，但是它确实可以成为很多人眼中的亮闪闪的词藻。向社会富裕阶层的财富开刀已经被称为是社会主义的“阶级斗争”的缩影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720077.md#1" target="_blank">李铭：警察酷刑迫害 中共灭绝人性</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1907182226301973-150x120.jpg" align ="left"></a>信仰“真、善、忍”的法轮功群体，历经漫漫二十年，中共迫害未曾停歇。据明慧网信息统计，二零一九年十一月份至少有49名法轮功学员被非法判刑，77人被非法庭审，44人被抓捕，124人被构陷到检察院、法院，13名65岁以上老年法轮功学员被冤判和非法庭审。仅今年一至十一月份，就有683人遭非法判刑，89名法轮功学员被迫害离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719442.md#1" target="_blank">黄天辰：盘点名人轶事 为中共站台的“礼物”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719442.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Untitled-14-150x120.jpg" align ="left"></a>最近有个现象值得深思，替中共站台的很多名人，会得到意外的“礼物”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723056.md#1" target="_blank">云鹤天：退党</a><br></h3>有位女教授
+随夫要出国
+因为是党员
+出境通不过......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722442.md#1" target="_blank">廖祖笙：有关“回去和他们再谈谈”的通报</a><br></h3>在佛协工作的两年，因我的薪酬只有在外工作时的一半，我家近两年过得十分清苦。两年的工作合约将要到期，按照协议，若我不再工作于佛协，需提前一个月告知，因此，当维稳办主任再次到我的办公室“坐坐”时，我依照协议提前一个月和对方打过招呼，言明我往后的月薪若是低于8000元，我将不会再续签此工作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722429.md#1" target="_blank">伍新：从“头踢脚”说起</a><br></h3>踢头反赖头踢脚，红党球兵辩言狡。
 
@@ -51,7 +55,5 @@
 马列鬼路 越奔越远......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719997.md#1" target="_blank">袁斌：GDP全球第二与关押记者世界最多</a><br></h3>2019年10月17日，31岁的大陆独立记者黄雪琴被广州警方刑事拘留，罪名是“挑衅滋事”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719883.md#1" target="_blank">王赫 ：习近平为何今年晋升17名上将？</a><br></h3>年终之际，猛戏连连，看来2019年真不一般。这不，习近平2018年上将一个不提，2019年竟忙不迭的分两次共提拔17名上将，其中，12月12日下午晋升7名，7月31日上午晋升10名（包括受到美国制裁的军委装备发展部部长李尚福）。这里面有什么奥秘呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:17 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719160.md#1" target="_blank">关乐：亡党眼前事快办该办事</a><br></h3>人人骂共党，好人盼亡党。
-亡党实非盼，业已到眼前。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
